@@ -360,6 +360,9 @@ Optimizations
 * GITHUB#13636: Optimizations to the decoding logic of blocks of postings.
   (Adrien Grand, Uwe Schindler)
 
+* GITHUB##13644: Improve NumericComparator competitive iterator logic by comparing the missing value with the top
+  value even after the hit queue is full (Pan Guixin)
+
 Changes in runtime behavior
 ---------------------
 
